--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "expo-web-browser": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -33,7 +34,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
