--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "./node_modules/.bin/eslint"
   },
   "jest": {
     "preset": "jest-expo"
@@ -23,6 +24,7 @@
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "expo-location": "^8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-web-browser": "~8.1.0",
     "react": "~16.9.0",
@@ -40,6 +42,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "jest-expo": "~37.0.0",
     "redux-logger": "^3.0.6"
   },
