--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.0.0",
-    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "expo": "~37.0.3",
@@ -27,6 +27,7 @@
     "expo-location": "^8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-web-browser": "~8.1.0",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -34,7 +35,9 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
+    "react-navigation-stack": "^2.4.0",
     "react-redux": "^7.2.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
